BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Cycle_Plan_Adjustment_vod__c.object
<CustomObject>
    <description>A work table used by the offline devices to store any discrepancy in cycle plan counts based on data records the onlline has visibility to vs what the offline devices has.  No data should be stored in this table in Salesforce.  All data is kept locally on the offline devices.</description>
    <fields>
        <fullName>Actual_vod__c</fullName>
        <description>The difference between actual calls as calculated by the online trigger vs the offline device.</description>
        <label>Actual</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Scheduled_vod__c</fullName>
        <description>The difference between scheduled calls as calculated by the online trigger vs the offline device.</description>
        <label>Scheduled</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cycle Plan Adjustment</label>
    <nameField>
        <displayFormat>CPA-{0000000}</displayFormat>
        <label>Cycle Plan Adjustments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cycle Plan Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>